transition to keycloak