@@ -3,17 +3,16 @@ package org.example.splitwalletserver.server.expenses.api;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import lombok.AllArgsConstructor;
-import org.example.splitwalletserver.server.expenses.Expense;
+import org.example.splitwalletserver.server.expenses.db.Expense;
 import org.example.splitwalletserver.server.expenses.domain.ExpenseService;
 import org.example.splitwalletserver.server.expenses.request.CreateExpenseRequest;
-import org.example.splitwalletserver.server.services.UserService;
+import org.example.splitwalletserver.server.users.services.UserServiceImpl;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
 @AllArgsConstructor
@@ -26,14 +25,14 @@ public class ExpenseController {
 
     private final ExpenseService expenseService;
 
-    private final UserService userService;
+    private final UserServiceImpl keycloakUserService;
 
     @GetMapping("{groupId}/expenses")
     public ResponseEntity<List<ExpenseDto>> getExpenses(@PathVariable Long groupId) {
         List<Expense> expenses = expenseService.getExpenses(groupId);
         List<ExpenseDto> expenseDtos = expenses.stream()
                 .map(this::fromExpenseToExpenseDto)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.status(201).body(expenseDtos);
     }
 
@@ -48,7 +47,7 @@ public class ExpenseController {
     private ExpenseDto fromExpenseToExpenseDto(Expense expense) {
         var expenseDto = modelMapper.map(expense, ExpenseDto.class);
         var amount = expense.getExpenseUsers().stream().filter(eu ->
-                        eu.getUser().getId().equals(userService.getCurrentUser().getId()))
+                        eu.getUser().getId().equals(keycloakUserService.getCurrentUser().getId()))
                 .findFirst().orElseThrow(()->new RuntimeException("Error!!!")).getAmount();
         expenseDto.setCurrentUserPaid(amount);
         return expenseDto;
